--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,6 +4,8 @@ parameters:
 #    parameter_name: value
 
 services:
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+  core.twig_extension:
+          class: Blog\CoreBundle\Twig\AppExtension
+          public: false
+          tags:
+              - { name: twig.extension }
